# 3dont

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  pyproject.toml  setup.py
cmake/: UsefulMacros.cmake
licenses/: LICENSE.linux.txt  LICENSE.mac.txt  LICENSE.win.txt
pptk/: CMakeLists.txt  __init__.py  _add_path.py
pptk/estimate_normals/: CMakeLists.txt  estimate_normals.cpp
pptk/include/: pptk_dll_export.h  progress_bar.h  python_util.h  timer.h
pptk/kdtree/: CMakeLists.txt  kdtree_wrapper.cpp
pptk/kdtree/src/: accumulator.h  box.h  kdtree-impl.h  kdtree.h  node.h  small_node.h
pptk/libs/: CMakeLists.txt
pptk/libs/qt_plugins/xcbglintegrations/: CMakeLists.txt
pptk/points/: __init__.py  expr.py  points.py
pptk/processing/estimate_normals/: CMakeLists.txt
pptk/vfuncs/: CMakeLists.txt  vfuncs.cpp
pptk/viewer/: CMakeLists.txt  background.h  comm_funcs.h  look_at.h  main.cpp  main_layout.h  main_layout.ui  octree.h  opengl_funcs.h  point_attributes.h  point_cloud.h  qt_camera.h  splines.h  text.h  timer.h  viewer.h  viewer.py
threedont/: CMakeLists.txt  __init__.py  __main__.py
threedont/SENSOR_MANAGER copia/: RDF_functions.py  Sensor_Management_Functions.py
threedont/app/: DESIGN.md  __init__.py  controller.py  db.py  queries.py  state.py  turtle_parse.py  viewer.py
threedont/app/state/: __init__.py  abstract_config.py  app_state.py  config.py  project.py
threedont/assets/: Heritage_Ontology.rdf  Urban_Ontology.rdf
threedont/gui/: CMakeLists.txt  __init__.py  box3.h  controller_wrapper.cpp  controller_wrapper.h  floor_grid.h  graph_tree_model.h  gui_wrapper.cpp  main.cpp  main_layout.cpp  main_layout.h  main_layout.ui  scale_legend.h  text.h  timer.h  types.h  viewer.h
threedont/gui/dialogs/: properties_mapping_selection.h
threedont/gui/pointsTreeView/: graph_tree_item.cpp  graph_tree_item.h  graph_tree_model.h
threedont/gui/points_tree_view/: graph_tree_item.h  graph_tree_model.cpp  graph_tree_model.h
threedont/gui/viewer/: background.h  box3.h  camera.h  camera_dolly.h  comm_funcs.h  floor_grid.h  look_at.h  octree.h  opengl_funcs.h  point_attributes.h  point_cloud.h  qt_camera.h  selection_box.h  splines.h  text.h  timer.h  viewer.h
threedont/gui/widgets/: scale_legend.cpp  scale_legend.h
threedont/interface/: __init__.py  controller.py  viewer.py
threedont/nl_2_sparql/: __init__.py  lib.py
threedont/no_2_sparql/: lib.py
threedont/sensor_manager/: Classes.py  RDF_functions.py  Sensor_Management_Functions.py  __init__.py  aws_iot_interface.py  notes.txt
threedont/sensor_manager/PROVISIONAL_MATERIAL/historics/: NOTE.rtf  humidity_sensor_1.csv  humidity_sensor_2.csv  humidity_sensor_3.csv  humidity_sensor_4.csv  temperature_sensor_1.csv  temperature_sensor_2.csv  temperature_sensor_3.csv  temperature_sensor_4.csv
