[project]
name = "3D-ont"
version = "0.0.1"
authors = [
  { name="Samuele Facenda", email="sfacenda@fbk.eu" },
]
description = "A frontend for visualizing queries to a 3D-ont database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: MIT License'
]
license = { text = "MIT" }
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["pptk"]

wheel.exclude = [
  "pptk/**/*.cpp",
  "pptk/**/*.h",
  "pptk/**/*.hpp"
]
