[project]
name = "threedont"
version = "0.0.1"
authors = [
  { name="Samuele Facenda", email="sfacenda@fbk.eu" },
]
description = "A frontend for visualizing queries to a 3D-ont database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    # 'License :: OSI Approved :: MIT License'
]
# license = { text = "MIT" }
# license-files = ["LICEN[CS]E*"]

[project.scripts]
threedont = "threedont.__main__:main"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.exclude = [
  "threedont/**/*.cpp",
  "threedont/**/*.h",
  "threedont/**/*.hpp",
  "threedont/**/*.ui",
]

sdist.include = ["threedont/assets/**"]
wheel.include = ["threedont/assets/**"]
